# fastnanoid

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: CI.yml  test.yml
benchmarks/: README.md  benchmark.py
python/fastnanoid/: __init__.py  _fastnanoid.pyi  uuid.py
src/: lib.rs
tests/: test_fastnanoid.py
